# Xiel

./: .travis.yml  CMakeLists.txt  LICENSE.md  Pokémon Xici.sln  README.md
Pokemon Xici/: Pokémon Xici.vcxproj  Pokémon Xici.vcxproj.filters  TypeWriter.cpp  XBattle.cpp  XBattle.h  XEngine.cpp  XEngine.h  XMap.cpp  XMap.h  XPlayer.cpp  XPlayer.h  main.cpp
Pokemon Xici/Interfaces/: States.h
Pokemon Xici/Objects/: Pokemon.cpp  Pokemon.h
Pokemon Xici/Texture/: AnimatedSprite.cpp  Animation.cpp  XSprite.cpp  XSprite.h
Pokemon Xici/data/: whee.prmp  xiel_test.prmp
Pokemon Xici/data/animation/: animation.lnk
Pokémon Xici/: TypeWriter.cpp  TypeWriter.h  XBattle.cpp  XBattle.h  XEngine.cpp  XEngine.h  XMap.cpp  XMap.h  XPlayer.cpp  XPlayer.h  main.cpp
Pokémon Xici/Objects/: Objects.h
Pokémon Xici/Texture/: AnimatedSprite.hpp  XSprite.cpp  XSprite.h
Pokémon Xici/data/: tileset_emerald.DIB  tileset_firered.DIB  xiel_test.prmp
cmake/macros/: FindLUA.cmake  FindSFML.cmake
data/: map.xmap  testmap(1).prmp
data/script/: main.lua
src/: TypeWriter.cpp  TypeWriter.h  XBattle.cpp  XBattle.h  XEngine.cpp  XEngine.h  XMap.cpp  XMap.h  XPlayer.cpp  XPlayer.h  main.cpp
src/Interfaces/: States.h
src/Objects/: Characters.cpp  Characters.h  MapStructs.h  Objects.h
src/Script/: XLua.cpp  XLua.h  sol.hpp
src/Texture/: AnimatedSprite.cpp  AnimatedSprite.hpp  Animation.cpp  Animation.hpp  XAnimation.cpp  XAnimation.h  XSprite.cpp  XSprite.h
